// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KolFormFieldLabelFc should render the correct component tag "label"  1`] = `
<label class="kol-form-field__label" htmlfor="test-id" id="test-id-label">
  <span class="kol-form-field__label-text kol-span">
    <span class="kol-span__container">
      <span class="kol-span__label">
        Test Label
      </span>
      <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
    </span>
  </span>
</label>
`;

exports[`KolFormFieldLabelFc should render the correct component tag "legend"  1`] = `
<legend class="kol-form-field__label" htmlfor="test-id" id="test-id-label">
  <span class="kol-form-field__label-text kol-span">
    <span class="kol-span__container">
      <span class="kol-span__label">
        Test Label
      </span>
      <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
    </span>
  </span>
</legend>
`;

exports[`KolFormFieldLabelFc should render with accessKey and shortKey 1`] = `
<label class="kol-form-field__label" htmlfor="test-id" id="test-id-label">
  <span class="kol-form-field__label-text kol-span kol-span--has-badge">
    <span class="kol-span__container">
      <span class="kol-span__label">
        Test L
        <u>
          a
        </u>
        bel
      </span>
      <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
      <kbd aria-hidden="true" class="badge-text-hint">
        A
      </kbd>
    </span>
  </span>
</label>
`;

exports[`KolFormFieldLabelFc should render with expert slot 1`] = `
<label class="kol-form-field__label" htmlfor="test-id" id="test-id-label">
  <span class="kol-form-field__label-text kol-span">
    <span class="kol-span__container">
      <span class="kol-span__slot"></span>
    </span>
  </span>
</label>
`;

exports[`KolFormFieldLabelFc should render with label 1`] = `
<label class="kol-form-field__label" htmlfor="test-id" id="test-id-label">
  <span class="kol-form-field__label-text kol-span">
    <span class="kol-span__container">
      <span class="kol-span__label">
        Test Label
      </span>
      <span aria-hidden="true" class="kol-span__slot" hidden=""></span>
    </span>
  </span>
</label>
`;
